--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
+    "handlebars": "^4.7.7",
     "hbs": "^4.2.0",
     "nodemon": "^2.0.20"
   }
